# sql

./: README.md  pyproject.toml  requirements.txt
server/: app.py
